Closed
Bug 223530
Opened 22 years ago
Closed 22 years ago
null pointer dereference in nsTreeContentView.cpp [@ nsTreeContentView::ContentRemoved ]
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
RESOLVED
FIXED
mozilla1.6beta
People
(Reporter: stef, Assigned: janv)
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
|
6.58 KB,
text/plain
|
Details | |
|
10.40 KB,
patch
|
janv
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5a) Gecko/20030728 Mozilla Firebird/0.6.1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.6a) Gecko/20031016 Firebird/0.7+
A crash ocurred due to a null pointer dereference in
nsTreeContentView::ContentRemoved. This occurs after all the content is removed
from a tree XUL element, shortly after it's been hidden. See the patch/stack
trace for details.
Reproducible: Always
Steps to Reproduce:
This was in a large mozilla based application and so duplicating this issue
without the entire batch of code would be difficult. However I've included a
stack trace and a patch which solves the problem.
Actual Results:
Mozilla crashed.
Expected Results:
Continued without a crash.
| Reporter | ||
Comment 1•22 years ago
|
||
| Reporter | ||
Comment 2•22 years ago
|
||
Comment 3•22 years ago
|
||
Marking NEW since it has patch & stack, and no dupes afaik.
You should ask for review/superreview (possibly bz or dbaron ?)
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: crash
Summary: null pointer dereference in nsTreeContentView.cpp → null pointer dereference in nsTreeContentView.cpp [@ nsTreeContentView::ContentRemoved ]
Comment 4•22 years ago
|
||
Comment on attachment 134029 [details] [diff] [review]
Patch which fixes the issue
Jan, could you review?
Attachment #134029 -
Flags: review?(varga)
| Assignee | ||
Comment 5•22 years ago
|
||
Comment on attachment 134029 [details] [diff] [review]
Patch which fixes the issue
yeah, this just makes sense
Attachment #134029 -
Flags: superreview?(bz-vacation)
Attachment #134029 -
Flags: review?(varga)
Attachment #134029 -
Flags: review+
Comment 6•22 years ago
|
||
Comment on attachment 134029 [details] [diff] [review]
Patch which fixes the issue
sr=bzbarsky. Jan, could you check this in, please? I may not be able to in
the near future...
Attachment #134029 -
Flags: superreview?(bz-vacation) → superreview+
| Assignee | ||
Comment 7•22 years ago
|
||
fixed, thanks for the patch Nate!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.6beta
Component: XP Toolkit/Widgets: Trees → XUL
QA Contact: shrir → xptoolkit.widgets
Updated•15 years ago
|
Crash Signature: [@ nsTreeContentView::ContentRemoved ]
You need to log in
before you can comment on or make changes to this bug.
Description
•