Fix for bug 223530. null pointer dereference in nsTreeContentView.cpp [@ nsTreeContentView::ContentRemoved ] r=me sr=bz patch by Nate Nielsen <nielsen@memberwebs.com>